# nonebot-bison

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile_browser  Dockerfile_tuna  LICENSE  README.md  alembic.ini  bot.py  codecov.yml  docker-compose.yml  docker.env.prod  for_test_plugin.py  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  temp.json  temp.py  test_base64.html  test_httpx.py
.circleci/: config.yml  main.yml
.claude/skills/generic-issue-log-analysis/: SKILL.md  root-cause-tracing.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pytest.yml  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: issue.yml  问题报告.md  问题报告.yml
.github/actions/build-docs/: action.yml
.github/actions/build-frontend/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/test-docker/: action.yml  test_docker.sh
.github/workflows/: ai-issue-analysis.yml  codecov.yml  main.yml  manual-build.yaml  pr-agent.yml  pyd1-compat.yml  pytest.yml  release-drafter.yml  release-trigger.yml  release.yml  ruff.yml  update_poetry_lock.yml  website-preview.yml
admin-frontend/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
admin-frontend/public/: index.html
admin-frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  main.tsx
admin-frontend/src/api/: base.ts  config.ts  utils.ts
admin-frontend/src/app/: dashboard.tsx  store.ts  subscriptions.tsx
admin-frontend/src/component/: addSubsModal.tsx  inputTag.tsx  subscribeCard.tsx
admin-frontend/src/components/: app-sidebar.tsx  app-topbar.tsx  mode-toggle.tsx  sidebar-title.tsx  subscription-card.tsx  theme-provider.tsx
admin-frontend/src/pages/: Home.css  Home.tsx  (+3 more)
docker/: Dockerfile  Dockerfile_browser  Dockerfile_tuna  Dockerfile_with_frontend  Dockerfile_with_frontend_sentry  Dockerfile_without_browser  docker-compose_metrics.yaml  grafana-dashboard-bison.json  grafana-dashboard-nonebot.json  grafana-dashboard.json  prometheus.yml
docs/: README.md
docs/.vuepress/: config.js  config.ts  navbar.ts  sidebar.ts  theme.ts
docs/dev/: README.md  cookie.md
docs/usage/: README.md  cookie.md  easy-use.md  install.md
extra_plugins/: auto_agree.py
extra_plugins/message/nonebot-bison-message-saa/: pyproject.toml
extra_plugins/message/nonebot-bison-message-saa/nonebot_bison_message_saa/: __init__.py  send.py  setting.py
nonebot_bison/: __init__.py  apis.py  bootstrap.py  compat.py  config_manager.py  inbox.py  metrics.py  plugin_config.py  send.py  setting.py  types.py  typing.py
nonebot_bison/admin_page/: __init__.py  api.py  jwt.py  token_manager.py  types.py  utils.py
nonebot_bison/card/: __init__.py  registry.py  types.py
nonebot_bison/cards/: __init__.py  registry.py  utils.py
nonebot_bison/config/: __init__.py  config_legacy.py  db.py  db_config.py  db_migration.py  db_model.py  utils.py
nonebot_bison/config_manager/: __init__.py  add_sub.py  del_sub.py  query_sub.py  utils.py
nonebot_bison/conveyor/: __init__.py  conveyor_manager.py
nonebot_bison/core/: __init__.py  courier.py
nonebot_bison/courier/: __init__.py  channel.py  courier.py  impl.py  middleware.py  model.py  param.py  parcel.py  post.py  roadmap.py  types.py  utils.py
nonebot_bison/db/: __init__.py  config_legacy.py  db_config.py  db_model.py  model.py  utils.py
nonebot_bison/delivery/: __init__.py  conveyor.py  meta.py  model.py  queue.py  registry.py  render.py  send.py
nonebot_bison/platform/: __init__.py  arknights.py  bilibili.py  ceobecanteen.py  endfield.py  ff14.py  haoyoukuaibao.py  mcbbsnews.py  ncm.py  platform.py  rss.py  weibo.py
nonebot_bison/post/: __init__.py  abstract_post.py  base_post.py  card_post.py  custom_post.py  plain_post.py  post.py  schemas.py  support.py  types.py  utils.py
nonebot_bison/scheduler/: __init__.py  manager.py  scheduler.py  statistic.py
nonebot_bison/script/: cli.py
nonebot_bison/sub_manager/: __init__.py  add_cookie.py  add_cookie_target.py  add_sub.py  del_cookie.py  del_cookie_target.py  del_sub.py  depends.py  group_manage.py  query_sub.py  utils.py
nonebot_bison/sub_manager_old/: add_cookie_target.py  del_cookie.py  del_cookie_target.py  del_sub.py
nonebot_bison/subs_io/: __init__.py
nonebot_bison/theme/: __init__.py  registry.py  render_helper.py  schemas.py  types.py  utils.py
nonebot_bison/types/: __init__.py  platform.py  schedule.py  subscribe.py  theme.py
nonebot_bison/utils/: __init__.py  classproperty.py  client_mgr.py  context.py  filter.py  get_bot.py  http.py  image.py  log.py  meta.py  scheduler_config.py  singleton.py  site.py  store.py  text.py
src/plugins/: auto_agree.py  nonebot_bison
test/: init.py  test_merge_pic.py
tests/: conftest.py  test_admin_page.py  test_card_gen.py  test_cli.py  test_config.py  test_config_manager.py  test_config_manager_abort.py  test_config_manager_add.py  test_config_manager_admin.py  test_config_manager_query_del.py  test_config_manages_add.py  test_context.py  test_courier.py  test_custom_post.py  test_get_bot.py  test_memory_leak_fix.py  test_merge_pic.py  test_new.py  test_plugin_config.py  test_post.py  test_proxy.py  test_render.py  test_send.py  utils.py
tests/cards/: test_arknights.py  test_ceobe.py  test_registry.py
tests/config/: test_config_legacy.py  test_config_operation.py  test_cookie.py  test_data_migration.py  test_scheduler_conf.py  test_subs_export.py
tests/post/: test_card_post.py  test_generate.py  test_plain_post.py
tests/scheduler/: test_scheduler.py  test_site.py  test_statistic.py
tests/sub_manager/: test_abort.py  test_add.py  test_add_cookie.py  test_admin.py  test_delete_cookie.py  test_no_permission.py  test_query_del.py  test_utils_simple.py
tests/subs_io/: test_cli.py  test_subs_io.py  utils.py
tests/theme/: test_registry.py  test_themes.py
tests/webui/: test_webui_auth.py  test_webui_me.py  utils.py
venv_test/: pyvenv.cfg
venv_test/Scripts/: activate  activate.bat
(+332 files in other folders)
