[project]
authors = [{ name = "felinae98", email = "felinae225@qq.com" }]
license = { text = "MIT" }
requires-python = "<4.0.0,>=3.12"
dependencies = [
    "httpx>=0.28.1",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-datastore>=1.3.1",
    "nonebot-plugin-prometheus>=0.4.1",
    "nonebot-plugin-send-anything-anywhere>=0.7.1",
    "nonebot2>=2.4.3",
    "pydantic!=2.5.0,!=2.5.1,<3.0.0,>=2.9.2",
    "tinydb>=4.8.2",
]
name = "nonebot-bison"
version = "0.10.0-alpha.1"
description = "Subscribe message from social medias"
keywords = ["nonebot", "nonebot2", "qqbot"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/felinae98/nonebot-bison"

[project.entry-points.nb_scripts]
bison = "nonebot_bison.script.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
test = []

[project.optional-dependencies]
docker = []

[tool.uv]
default-groups = ["dev", "test"]

[tool.uv.workspace]
members = [
    "extra_plugins/theme/*",
    "extra_plugins/platform/*",
    "extra_plugins/message/*",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nonebot_bison"
module-root = ""

[tool.pytest.ini_options]
markers = [
  "compare: compare fetching result with rsshub",
  "render: render img by chrome",
  "external: use external resources",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
  "TC",    # flake8-type-checking
  "DTZ",   # flake8-datetimez
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nonebot_bison", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
enableExperimentalFeatures=true
typeCheckingMode = "standard"
disableBytesTypePromotions = true
pythonVersion = "3.12"
pythonPlatform = "All"
executionEnvironments = [
  { root = "./tests", extraPaths = [
    "./",
  ] },
  { root = "./" },
]
defineConstant = { PYDANTIC_V2 = true }

# 开发测试使用
[tool.nonebot]
adapters = [
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_bison", "nonebot_plugin_prometheus"]
plugin_dirs = ["extra_plugins/theme", "extra_plugins/platform", "extra_plugins/message"]
builtin_plugins = ["echo"]
