[project]
name = "nonebot-bison-message-saa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Azide", email = "rukuy@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
]

[project.scripts]
nonebot-bison-message-saa = "nonebot_bison_message_saa:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nonebot_bison_message_saa"
module-root = ""
